# simple-cmake-package

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
first_class/: FirstClass.cpp  FirstClass.hpp
first_library/: FirstClass.hpp
include/: ExampleClass.hpp
second_class/: SecondClass.cpp  SecondClass.hpp
second_library/: SecondClass.cpp  SecondClass.hpp
src/: ExampleClass.cpp
